# check-spaces-in-paths

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
src/no_spaces/: check_spaces.py
