[metadata]
name = no-spaces
version = attr: no_spaces.__version__
requires-python = ">=3.8"
url = https://github.com/dyollb/check-spaces-in-paths
description = Prevent committing files or folders with spaces
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
project_urls =
    Bug Tracker=https://github.com/dyollb/check-spaces-in-paths/issues
    Source Code=https://github.com/dyollb/check-spaces-in-paths

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    build
    pre_commit

[options.entry_points]
console_scripts =
    check-spaces-in-paths = no_spaces.check_spaces:main
